--- a/css/style.css
+++ b/css/style.css
@@ -700,7 +700,7 @@ form {
   position: fixed;
   right: 0;
   top: 0;
-  margin: 10px;
+  margin: 15px;
   z-index: 2;
 }
 
@@ -713,9 +713,10 @@ form {
   background-color: rgba(0, 0, 0, 0.918);
   width: 800px;
   position: fixed;
+  z-index: 1;
   right: 0;
   top: 0;
-  padding: 10px;
+  padding: 20px;
   box-sizing: border-box;
   border-radius: 0 0 0 15px;
 }
